# rules_dart

./: MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release.yml  release_prep.sh
dart/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
dart/private/: BUILD.bazel  toolchains_repo.bzl  versions.bzl
dart/tests/: versions_test.bzl
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
